@@ -15,7 +15,6 @@ build: $(PYVERS:%=build-python%)
 
 build-python%:
 	dh_testdir
-	mv setup.cfg setup.cfg.outofway
 	python$* setup.py build
 	touch $@
 
@@ -25,7 +24,6 @@ clean:
 	rm -f build-python*
 	rm -rf build
 	-find . -name '*.py[co]' | xargs rm -f
-	test -r setup.cfg.outofway && mv setup.cfg.outofway setup.cfg || true
 	dh_clean
 
 install: build $(PYVERS:%=install-python%)
@@ -37,10 +35,8 @@ install-python%:
 	dh_installdirs
 	python$* setup.py install --root=$(CURDIR)/debian/python-tp-netlib \
 		--single-version-externally-managed
-	# This is code for testing the library, shouldn't be in the release
-	rm $(CURDIR)/debian/python-tp-netlib/usr/lib/python2.4/site-packages/tp/netlib/test.py
 	# This piece of magic makes the tp module seperation work
-	cp tp/__init__.py $(CURDIR)/debian/python-tp-netlib/usr/lib/python2.4/site-packages/tp/
+	cp tp/__init__.py $(CURDIR)/debian/python-tp-netlib/usr/lib/python$*/site-packages/tp/
 
 # Build architecture-independent files here.
 binary-indep: build install
